clusters/takeout/apps/media/handbrake/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: handbrake
  namespace: media
  labels:
    app: handbrake
spec:
  serviceName: handbrake
  selector:
    matchLabels:
      app: handbrake
  replicas: 1 # active nas
  template:
    metadata:
      labels:
        app: handbrake
    spec:
      containers:
        - name: handbrake
          image: jlesage/handbrake:latest
          imagePullPolicy: Always
          command: # ["sh","-c","tail -f /dev/null"]
          - sh
          - -c
          - |
            apk add curl &&
            /init
          volumeMounts:
            - name: handbrake-config
              mountPath: /config
            - name: media
              subPath: watch
              mountPath: /handbrake_watch
            - name: media
              subPath: transcoded
              mountPath: /handbrake_output
            - name: dri
              mountPath: /dev/dri
            - name: media
              mountPath: /storage/media
            - name: temp
              mountPath: /storage/temp
          securityContext:
            privileged: true
          resources:
            requests: 
              cpu: 100m
            limits:
              memory: 3Gi
      volumes:
        - name: dri
          persistentVolumeClaim:
            claimName: dri-pvc
        - name: handbrake-config
          persistentVolumeClaim:
            claimName: handbrake-config-nas
        - name: media
          persistentVolumeClaim:
            claimName: nas-volume1-media
        - name: temp
          persistentVolumeClaim:
            claimName: stash-temp-nas
      imagePullSecrets:
        - name: docker-hub
      nodeSelector:
        graphics: dri
  # volumeClaimTemplates:
  #   - apiVersion: v1
  #     kind: PersistentVolumeClaim
  #     metadata:
  #       name: handbrake-config
  #     spec:
  #       accessModes:
  #         - ReadWriteMany
  #       volumeMode: Filesystem
  #       storageClassName: nfs-client
  #       resources:
  #         requests:
  #           storage: 1Gi
