clusters/takeout/apps/media/handbrake/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: handbrake
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: handbrake-credentials
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
spec:
  tls:
    - hosts:
        - "*.tyzbit.io"
      secretName: tyzbit.io-tls
  rules:
  - host: transcode.tyzbit.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: handbrake
            port:
              number: 5800
